--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-fastapi[all]
+matplotlib==3.10.0
+numpy==2.2.1
+pandas==2.2.3
+plotly==5.24.1
+pydantic_settings==2.7.1
+requests==2.32.3
+requests_toolbelt==1.0.0
+seaborn==0.13.2
+streamlit==1.41.1
